# BachelorProject

./: README.md
Gazebo/catkin_ws/devel/: .catkin
Gazebo/catkin_ws/src/rescap_controller/: CMakeLists.txt  package.xml
Gazebo/worlds/: empty_base.world  empty_demap.world  empty_map.world  flight_base.world
Gazebo_models/detectMap/: model.config  model.sdf
Gazebo_models/detectWall/: model.config  model.sdf
Gazebo_models/ground_demap/: model.config  model.sdf
Gazebo_models/ground_demap/materials/scripts/: ground_map.material
Gazebo_models/ground_map/: README.md  model.config  model.sdf
Gazebo_models/ground_map/materials/scripts/: ground_map.material
LTLMop/src/: specEditor.py
LTLMop/src/examples/CleanRooms/: iRobotCreatewithpickup.aut  iRobotCreatewithpickup.dot  iRobotCreatewithpickup.ltl  iRobotCreatewithpickup.smv  iRobotCreatewithpickup.spec  iRobotCreatewithpickup_decomposed.regions
LTLMop/src/examples/firefighting/: firefighting.dot  firefighting_decomposed.regions
LTLMop/src/examples/grocery/: grocery.aut  grocery.ltl  grocery.smv  grocery.spec  grocery_decomposed.regions
LTLMop/src/examples/lineFollower/: linefollower.aut  linefollower.ltl  linefollower.smv  linefollower.spec  linefollower_decomposed.regions
LTLMop/src/examples/ltlworkshop/: patrol.aut  patrol.ltl  patrol.spec  patrol_decomposed.regions
LTLMop/src/examples/myTest/: house.pgm  myTest.aut  myTest.dot  myTest.ltl  myTest.regions  myTest.smv  myTest.spec  (+1 more)
LTLMop/src/lib/: FPBuild.py  FPBuilderTest.py
LTLMop/src/lib/FPBuilder/Models/BaseActuators/: BaseAct.fpp  BaseMove.fpp  BaseStart.fpp  CMakeLists.txt
LTLMop/src/lib/FPBuilder/Models/BaseMission/: BaseController.cpp  BaseController.fpp  BaseController.hpp  BaseExecutor.cpp  BaseExecutor.fpp  BaseExecutor.hpp  BaseExecutor_NoRos.cpp  BaseExecutor_NoRos.hpp  BasePorts.fpp  CMakeLists.txt
doc/: 基于GR(1)规约的控制程序综合_应用部分.pptx
fpp/vscode/fpp/: package.json
(+165 files in other folders)
